# Kafka-The-Definitive-Guide

./: README.md  pyproject.toml
my_kafka_project/: getting_started.ini  main.py  producer.py
my_kafka_project/Chapter14_Kafka_Streams/: README.md
my_kafka_project/Chapter3_Producer/: README.md
my_kafka_project/Chapter4_Consumer/: README.md
my_kafka_project/Chapter6_Kafka_Internal_Working_Mechanism/: README.md
my_kafka_project/Chapter7_Reliable_Data_Delivery/: README.md
my_kafka_project/Chapter8_Exactly_Once_Semantics/: README.md
my_kafka_project/consumers/: consumer1.py  consumer2.py  consumer_example.py
my_kafka_project/producers/: producer1.py  producer2.py  producer_examlple.py
