[tool.poetry]
name = "my-kafka-project"
version = "0.1.0"
description = ""
authors = ["kwongminlim <dnwjd6452@naver.com>"]
readme = "README.md"
packages = [{include = "my_kafka_project"}]

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^2.3.0"
configparser = "^6.0.0"
urllib3 = "^2.1.0"
requests = "^2.31.0"
avro = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
